[package]
name = "mine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-multipart = {version = "0.6.1", features = ["tempfile"]}
actix-web = "4.4.1"
mime = "0.3.17"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
jsonwebtoken = "9"
serde = {version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
actix-cors = "0.7.0"
sentry = { version = "0.41.0", features = ["actix", "logs", "log"] }
